--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>The Block HTML Template</title>
+<title>Dannisserv</title>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <!--
@@ -35,15 +35,13 @@ http://www.tooplate.com/view/2042-the-block
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="contact.html">Social</a></li>
             </ul>    	
         </div> <!-- end of tooplate_menu -->
     </div> <!-- end of forever header -->
     
     <div id="tooplate_middle">
     	<div id="flash_grid_slider">
-            <a rel="nofollow" href="http://www.adobe.com/go/getflashplayer">
-                <img src="http://www.adobe.com/images/shared/download_buttons/get_flash_player.gif" alt="Get Adobe Flash player" />
             </a>
         </div>
     </div> <!-- end of middle -->
