--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@ http://www.tooplate.com/view/2042-the-block
     </div> <!-- end of middle -->
     
     <div id="tooplate_content"><span class="content_top"></span>
-    	<h2>Welcome To The Block!</h2>
+    	<h2>Welcome to Dannisserv!</h2>
 <div class="image_wrapper image_fl"><span></span>
         	<img src="images/tooplate_image_01.jpg" alt="image" />
         </div>
-        <p><em>The Block is a free website template from Tooplate. Credit goes to <a rel="nofollow" href="http://www.photovaco.com">Free Photos</a> for photos used in this template.</em></p>	
+        <p><em></em></p>	
         <p align="justify">Aliquam et augue et odio luctus posuere sit amet et nisi. Maecenas convallis, est sit amet convallis consectetur, elementum lacus, ut fermentum elit sem. Duis eu elit tortor, sed condimentum nulla. Phasellus varius posuere adipiscing. Mauris sodales dictum ullamcorper. Validate <a href="http://validator.w3.org/check?uri=referer" rel="nofollow"><strong>XHTML</strong></a> and <a href="http://jigsaw.w3.org/css-validator/check/referer" rel="nofollow"><strong>CSS</strong></a>.</p>
         <div class="cleaner h40"></div>
 <div class="box_w220">
@@ -73,7 +73,7 @@ http://www.tooplate.com/view/2042-the-block
     </div> <!-- end of content -->
     
     <div id="tooplate_footer">
-    	Copyright © 2048 <a href="#">Company Name</a>
+    	Copyright © 2018 <a href="#">Dannisserv</a>
         <div class="cleaner"></div>
 	</div>
 
