--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ http://www.tooplate.com/view/2042-the-block
 <div class="image_wrapper image_fl"><span></span>
         	<img src="images/tooplate_image_01.jpg" alt="image" />
         </div>
-        <p><em></em></p>	
+        <p><em>Dannisserv is a economic server. You can come on and play with your friends and meet new players!</em></p>	
         <p align="justify">Aliquam et augue et odio luctus posuere sit amet et nisi. Maecenas convallis, est sit amet convallis consectetur, elementum lacus, ut fermentum elit sem. Duis eu elit tortor, sed condimentum nulla. Phasellus varius posuere adipiscing. Mauris sodales dictum ullamcorper. Validate <a href="http://validator.w3.org/check?uri=referer" rel="nofollow"><strong>XHTML</strong></a> and <a href="http://jigsaw.w3.org/css-validator/check/referer" rel="nofollow"><strong>CSS</strong></a>.</p>
         <div class="cleaner h40"></div>
 <div class="box_w220">
