--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@ http://www.tooplate.com/view/2042-the-block
     <div id="tooplate_content"><span class="content_top"></span>
     	<h2>Welcome to Dannisserv!</h2>
 <div class="image_wrapper image_fl"><span></span>
-        	<img src="images/Dannisserv.jpg" alt="image" />
+        	<img src="images/gallery/Dannisserv.jpg" alt="image" />
         </div>
-        <p><em>Dannisserv is a economic server. You can come on and play with your friends and meet new players!</em></p>	
-        <p align="justify">Aliquam et augue et odio luctus posuere sit amet et nisi. Maecenas convallis, est sit amet convallis consectetur, elementum lacus, ut fermentum elit sem. Duis eu elit tortor, sed condimentum nulla. Phasellus varius posuere adipiscing. Mauris sodales dictum ullamcorper. Validate <a href="http://validator.w3.org/check?uri=referer" rel="nofollow"><strong>XHTML</strong></a> and <a href="http://jigsaw.w3.org/css-validator/check/referer" rel="nofollow"><strong>CSS</strong></a>.</p>
+        <p>Dannisserv is a economic server. You can come on and play with your friends and meet new players!</p>	
+        <p align="justify">Below are what we have on Dannisserv and small descriptions underneath.</a>.</p>
         <div class="cleaner h40"></div>
 <div class="box_w220">
         	<h4>pharetra id turpis<span>Lorem Ipsum Dolor</span></h4>
