--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@ http://www.tooplate.com/view/2042-the-block
 <div id="tooplate_wrapper">
 
 	<div id="tooplate_header">
-        <div id="site_title"><h1><a href="#">The Block</a></h1></div>
+        <div id="site_title"><h1><a href="#">Dannisserv</a></h1></div>
         <div id="tooplate_menu">
             <ul>
                 <li><a href="index.html" class="current">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
-                <li><a href="blog.html">Blog</a></li>
+                <li><a href="blog.html">News</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="contact.html">Social</a></li>
             </ul>    	
@@ -54,8 +54,8 @@ http://www.tooplate.com/view/2042-the-block
         <p align="justify">Below are what we have on Dannisserv and small descriptions underneath.</a>.</p>
         <div class="cleaner h40"></div>
 <div class="box_w220">
-        	<h4>pharetra id turpis<span>Lorem Ipsum Dolor</span></h4>
-           	<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus porta adi Piscing libero, eget elem ntum lectus varius sed.</p>
+	<h4>PlotMe</span></p>
+	<p>On Dannisserv we call PlotMe Creative World. Basically what you do is you claim a plot and you can build what ever you want on creative and view other players creations!
             <a href="#" class="more">more</a>
         </div>
         <div class="box_w220">
