--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ http://www.tooplate.com/view/2042-the-block
         <div class="cleaner h40"></div>
 <div class="box_w220">
 	<h4>PlotMe</span></p>
-	<p>On Dannisserv we call PlotMe Creative World. Basically what you do is you claim a plot and you can build what ever you want on creative and view other players creations!
+	<p>On Dannisserv we call PlotMe Creative World. Basically what you do is you claim a plot and you can build what ever you want on creative and view other players creations!</p>
             <a href="#" class="more">more</a>
         </div>
         <div class="box_w220">
