--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ http://www.tooplate.com/view/2042-the-block
             </a>
         </div>
     </div> <!-- end of middle -->
-    
+<bgcolor="#f46464">
     <div id="tooplate_content"><span class="content_top"></span>
     	<h2>Welcome to Dannisserv!</h2>
 <div class="image_wrapper image_fl"><span></span>
@@ -56,7 +56,6 @@ http://www.tooplate.com/view/2042-the-block
 <div class="box_w220">
 	<h4><span>PlotMe</span></h4>
            	<p>We call PlotMe Creative World. On creative world you can claim a plot and build whatever you want in creative! You can also go to other players plots and see their creations!</p>
-            <a href="#" class="more">more</a>
         </div>
         <div class="box_w220">
 	<h4><span>Island World</span></h4>
@@ -65,7 +64,6 @@ http://www.tooplate.com/view/2042-the-block
         <div class="box_w220 rmb">
         <h4><span>Survival/Wilderness</span></h4>
            	<p>You warp to the Wild then from there you type a command that will be shown on a hologram, or you click the hologram you will then be teleported somewhere random in the world and if you don't like where you have been teleported then you can use the command to teleport to somewhere else. That is where you can build your home or whatever you want to do.</p>
-            <a href="#" class="more">more</a>
         </div>
         
         <div class="cleaner"></div>
