--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@ http://www.tooplate.com/view/2042-the-block
             </a>
         </div>
     </div> <!-- end of middle -->
-<bgcolor="#f46464">
+body {
+    background-color: #f46464;
+}
     <div id="tooplate_content"><span class="content_top"></span>
     	<h2>Welcome to Dannisserv!</h2>
 <div class="image_wrapper image_fl"><span></span>
