--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ http://www.tooplate.com/view/2042-the-block
 <div id="tooplate_wrapper">
 
 	<div id="tooplate_header">
-        <div id="site_title"><h1><a href="#">Dannisserv</a></h1></div>
+        <div id="site_title"><h1>Dannisserv</h1></div>
         <div id="tooplate_menu">
             <ul>
                 <li><a href="index.html" class="current">Home</a></li>
