--- a/index.html
+++ b/index.html
@@ -29,7 +29,12 @@ http://www.tooplate.com/view/2042-the-block
 <div id="tooplate_wrapper">
 
 	<div id="tooplate_header">
-		<div id="site_title"><p>Dannisserv</p></div>
+		<style>
+			{
+				color:#fffff
+			}
+			
+		<div id="site_title"><h4>Dannisserv</h4></div>
         <div id="tooplate_menu">
             <ul>
                 <li><a href="index.html" class="current">Home</a></li>
@@ -44,6 +49,7 @@ http://www.tooplate.com/view/2042-the-block
     <div id="tooplate_middle">
     	<div id="flash_grid_slider">
             </a>
+		</style>
         </div>
     </div> <!-- end of middle -->
 	
