--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ http://www.tooplate.com/view/2042-the-block
         <div class="cleaner h40"></div>
 <div class="box_w220">
 	<h4><span>PlotMe</span></h4>
-           	<p>We call PlotMe Creative World. On creative world you can claim a plot and build whatever you want in creative! You can also go to other players plots and see their creations!</p>
+           	<p>We call PlotMe, Creative World. On creative world you can claim a plot and build whatever you want in creative! You can also go to other players plots and see their creations!</p>
         </div>
         <div class="box_w220">
 	<h4><span>Island World</span></h4>
