--- a/about.html
+++ b/about.html
@@ -17,25 +17,24 @@ http://www.tooplate.com/view/2042-the-block
 <div id="tooplate_wrapper">
 
 	<div id="tooplate_header">
-        <div id="site_title"><h1><a href="#">The Block</a></h1></div>
         <div id="tooplate_menu">
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html" class="current">About Us</a></li>
-                <li><a href="blog.html">Blog</a></li>
+                <li><a href="blog.html">News</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="contact.html">Social</a></li>
             </ul>    	
         </div> <!-- end of tooplate_menu -->
     </div> <!-- end of forever header -->
     
     <div id="tooplate_middle_sub">
-    	<h2>About Our Company</h2>
-        <p>Sed tempus nunc dolor, sit amet aliquet ligula. Ut euismod lectus vel ligula euismod id porttitor tortor placerat. Aenean tincidunt magna sit amet turpis auctor sagittis. Phasellus aliquet augue nec elit lacinia et faucibus massa scelerisque.</p>
+    	<h2>About Dannisserv</h2>
+        <p>When you join Dannisserv you will be welcomed with a message saying that your'e new on the server! And who ever is there, if it is other players that know a lot about the server, or me we can give you a tour of the server and tell you how everything works!</p>
     </div> <!-- end of middle -->
     
     <div id="tooplate_content"><span class="content_top"></span>
-    	<h2>Our Company Objectives</h2>
+    	<h2>What is on our server</h2>
 <div class="image_wrapper image_fr"><span></span>
         	<img src="images/tooplate_image_01.jpg" alt="image" />
         </div>
