--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>The Block Theme - About Our Company</title>
+<title>Dannisserv - About us</title>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <!--
