--- a/about.html
+++ b/about.html
@@ -37,9 +37,8 @@ http://www.tooplate.com/view/2042-the-block
     	<h2>What is on our server</h2>
 <div class="image_wrapper image_fr"><span></span>
         	<img src="images/tooplate_image_01.jpg" alt="image" />
-        </div>
-        <p><em>Morbi congue lorem sit amet odio iaculis tincidunt. Donec nibh, molestie nec pellentesque non, in diam. Class aptent taciti sociosqu ad litora torquent per conubia nostra.</em></p>	
-        <p>Aliquam et augue et odio luctus posuere sit amet et nisi. Maecenas, est sit amet convallis consectetur, lacus ligula elementum lacus, ut fermentum elit sem et nisi. Duis eu elit tortor, sed condimentum nulla. Phasellus varius posuere adipiscing. Mauris sodales ullamcorper. Validate <a href="http://validator.w3.org/check?uri=referer" rel="nofollow"><strong>XHTML</strong></a> and <a href="http://jigsaw.w3.org/css-validator/check/referer" rel="nofollow"><strong>CSS</strong></a>.</p>
+        </div>	
+        <p>On Dannisserv you get $10000 as starter money when you first join. But don't worry you can make money by growing stuff and selling them at the shop! There is also other things to do! If you want to apply for staff you can go to the Social section for links to apply!</p>
         <div class="cleaner h40"></div>
 		<div class="box_w330 float_l">
         	<h4>what our customers say<span>Testimonial</span></h4>
