--- a/about.html
+++ b/about.html
@@ -38,12 +38,12 @@ http://www.tooplate.com/view/2042-the-block
 <div class="image_wrapper image_fr"><span></span>
         	<img src="images/tooplate_image_01.jpg" alt="image" />
         </div>	
-        <p>On Dannisserv you get $10000 as starter money when you first join. But don't worry you can make money by growing stuff and selling them at the shop! There is also other things to do! If you want to apply for staff you can go to the Social section for links to apply!</p>
+        <p>On Dannisserv you get $10000 as starter money when you first join. But don't worry you can make more money by growing stuff and selling them at the shop! There is also other things to do! If you want to apply for staff you can go to the Social section for links to apply!</p>
         <div class="cleaner h40"></div>
 		<div class="box_w330 float_l">
-        	<h4>what our customers say<span>Testimonial</span></h4>
+        	<h4><span>Server Logo</span></h4>
            	<blockquote>
-            <p>Fusce nec felis id lacus sollicitudin vulputate. Sed vitae elit at diam vestibulum ullamcorper et nec quam. Aenean eit ut luctus sit amet, elementum quis enim. Proin tincidunt, arcu id pellentesque accumsan, neque dolor imperdiet ligula, quis viverra tellus nulla a odio. Curabitur vitae enim risus, at placerat turpis. Mauris feugiat suscipit tempus fringilla, felis in velit.</p>
+            <p>.</p>
             
             <cite>Harry - <span>Senior Webmaster</span></cite>
             </blockquote>
