--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@ http://www.tooplate.com/view/2042-the-block
 		<div class="box_w330 float_l">
         	<h4><span>Server Logo</span></h4>
            	<blockquote>
-            <p>.</p>
+            <img src="images/DannisservLogo.jpg" alt="image" />
             
             <cite>Harry - <span>Senior Webmaster</span></cite>
             </blockquote>
