--- a/about.html
+++ b/about.html
@@ -44,19 +44,6 @@ http://www.tooplate.com/view/2042-the-block
         	<h4><span>Server Logo</span></h4>
            	<blockquote>
             <img src="images/DannisservLogo.jpg" alt="image" />
-            
-            <cite>Harry - <span>Senior Webmaster</span></cite>
-            </blockquote>
-            <a href="#" class="more">more</a>
-        </div>
-        <div class="box_w330 float_r">
-        	<h4>what we do<span>Services</span></h4>
-           	<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit eget elementum lectus varius sed.</p>
-            <ul class="tooplate_list">
-            	<li>Morbi quis lorem risus</li>
-                <li>Suspendisse cursus</li>
-                <li>Donec at viverra</li>
-                <li>Proin eget purus ante</li>
             </ul>
             <a href="#" class="more">more</a>
         </div>
@@ -64,7 +51,7 @@ http://www.tooplate.com/view/2042-the-block
     </div> <!-- end of content -->
     
     <div id="tooplate_footer">
-    	Copyright © 2048 <a href="#">Company Name</a>
+    	Copyright © 2018 <a href="#">Dannisserv</a>
         <div class="cleaner"></div>
 	</div>
 
