--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@ http://www.tooplate.com/view/2042-the-block
     <div id="tooplate_content"><span class="content_top"></span>
     	<h2>What is on our server</h2>
 <div class="image_wrapper image_fr"><span></span>
-        	<img src="images/tooplate_image_01.jpg" alt="image" />
+        	<img src="images/Aboutus.jpg" alt="image" />
         </div>	
         <p>On Dannisserv you get $10000 as starter money when you first join. But don't worry you can make more money by growing stuff and selling them at the shop! There is also other things to do! If you want to apply for staff you can go to the Social section for links to apply!</p>
         <div class="cleaner h40"></div>
