--- a/contact.html
+++ b/contact.html
@@ -51,6 +51,9 @@ $(function() {
             <div id="contact_form">
         
 		    <h5>Links</h5>
+		    <li><a href="https://twitter.com/dannisserv">Twitter</a></li>
+		    <li><a href="https://instagram/dannisserv">Instagram</a></li>
+		    <li><a href="https://discord.gg/8D86RK9">Discord</a></li>
 
             </div> 
         </div>
