--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@ $(function() {
         
 		    <h5>Links</h5>
                     <a href="https://www.twitter.com/dannisserv">
-		    <img border="0" alt="Twitter" src="TwitterLogo.png" width="100" height="100">
+		    <img border="0" alt="image" src="images/TwitterLogo.png" width="100" height="100">
 </a>
 
             </div> 
