--- a/contact.html
+++ b/contact.html
@@ -50,9 +50,12 @@ $(function() {
     	<div class="box_w330 float_l">
             <div id="contact_form">
         
-		    <h5>Links</h5>
+		    <h5>Links (Click on the icons)</h5>
                     <a href="https://www.twitter.com/dannisserv">
 		    <img border="0" alt="image" src="images/TwitterLogo.png" width="100" height="100">
+</a>
+		    <a href="https://www.instagram.com/dannisserv">
+		    <img border="0" alt="image" src="images/InstagramLogo.png" width="100" height="100">
 </a>
 
             </div> 
