--- a/contact.html
+++ b/contact.html
@@ -57,6 +57,9 @@ $(function() {
 		    <a href="https://www.instagram.com/dannisserv">
 		    <img border="0" alt="image" src="images/InstagramLogo.png" width="100" height="100">
 </a>
+		    <a href="https://discord.gg/8D86RK9">
+		    <img border="0" alt="image" src="images/DiscordLogo.png" width="100" height="100">
+</a>
 
             </div> 
         </div>
