--- a/contact.html
+++ b/contact.html
@@ -66,13 +66,14 @@ $(function() {
         </div>
             
         <div class="box_w330 float_r">
-            <h5>Location</h5>
-            <div id="map">
+            <h5>Discord Stats</h5>
 <iframe src="https://discordapp.com/widget?id=401131424347979786&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"></iframe>
                     </a>
                 </div>
             </div>                
             <div class="cleaner h30">
+         <h5>Server Stats</h5>
+<a href='https://minecraftservers.biz/'><img src='https://minecraftservers.biz/servers/106547/image.png?size=large&color=blue&hidden_port=true' /></a>
         </div>    	
         
         <div class="cleaner"></div>
