--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@ http://www.tooplate.com/view/2042-the-block
 <div class="image_wrapper image_fr"><span></span>
         	<img src="images/Aboutus.jpg" alt="image" />
         </div>	
-        <p>On Dannisserv you get $10000 as starter money when you first join. But don't worry you can make more money by growing stuff and selling them at the shop! There is also other things to do! If you want to apply for staff you can go to the Social section for links to apply!</p>
+        <p>On Dannisserv you get $10000 as starter money when you first join. But don't worry you can make more money by growing stuff and selling them at the shop! There is also other things to do! If you want to apply for staff you can go to the Social section for links to apply! Dannisserv is a Towny server aswell! You can make a town and invite other players! And compete against other towns.</p>
         <div class="cleaner h40"></div>
 		<div class="box_w330 float_l">
         	<h4><span>Server Logo</span></h4>
