--- a/about.html
+++ b/about.html
@@ -45,6 +45,10 @@ http://www.tooplate.com/view/2042-the-block
            	<blockquote>
             <img src="images/DannisservLogoSmall.jpg" alt="image" />
 			</ul>
+			<h4><span>Server Banner</span></h4>
+           	<blockquote>
+            <img src="images/gallery/Dannisserv.jpg" alt="image" />
+			</ul>
         </div>
         <div class="cleaner"></div>
     </div> <!-- end of content -->
