--- a/contact.html
+++ b/contact.html
@@ -71,9 +71,13 @@ $(function() {
                     </a>
                 </div>
             </div>                
-            <div class="cleaner h30">
-         <h5>Server Stats</h5>
-<a href='https://minecraftservers.biz/'><img src='https://minecraftservers.biz/servers/106547/image.png?size=large&color=blue&hidden_port=true' /></a>
+            <h5>Address</h5>
+            <h6>Company Name</h6>
+            990-880 Ut cursus condimentum, <br />
+            Donec tristique sapien, 10110<br />
+            Vitae malesuada, diam a mollis tempor<br /><br />
+			<b>Phone:</b> 010-064-2500 <br />
+            <b>Email:</b> <a href="mailto:info@company.com">info@company.com</a> 
         </div>    	
         
         <div class="cleaner"></div>
