--- a/contact.html
+++ b/contact.html
@@ -71,6 +71,8 @@ $(function() {
                     </a>
                 </div>
             </div>                
+           <div class="cleaner h30"></div>
+            
             <h5>Address</h5>
             <h6>Company Name</h6>
             990-880 Ut cursus condimentum, <br />
