--- a/contact.html
+++ b/contact.html
@@ -71,7 +71,15 @@ $(function() {
                     </a>
                 </div>
             </div>                
-            <div class="cleaner h30"></div>
+         <div class="cleaner h30"></div>
+            
+            <h5>Address</h5>
+            <h6>Company Name</h6>
+            990-880 Ut cursus condimentum, <br />
+            Donec tristique sapien, 10110<br />
+            Vitae malesuada, diam a mollis tempor<br /><br />
+			<b>Phone:</b> 010-064-2500 <br />
+            <b>Email:</b> <a href="mailto:info@company.com">info@company.com</a> 
         </div>    	
         
         <div class="cleaner"></div>
