--- a/contact.html
+++ b/contact.html
@@ -66,12 +66,15 @@ $(function() {
         </div>
             
         <div class="box_w330 float_r">
-            <h5>Discord Stats</h5>
-<iframe src="https://discordapp.com/widget?id=401131424347979786&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"></iframe>
+            <h5>Location</h5>
+            <div id="map">
+            	<div class="image_wrapper"><span></span>
+                    <a href="images/map_big.jpg" title="Company Map">
+                        <img width="300" height="200" src="images/map_thumb.jpg" alt="Map" />
                     </a>
                 </div>
             </div>                
-         <div class="cleaner h30"></div>
+            <div class="cleaner h30"></div>
             
             <h5>Address</h5>
             <h6>Company Name</h6>
