--- a/contact.html
+++ b/contact.html
@@ -68,9 +68,7 @@ $(function() {
         <div class="box_w330 float_r">
             <h5>Location</h5>
             <div id="map">
-            	<div class="image_wrapper"><span></span>
-                    <a href="images/map_big.jpg" title="Company Map">
-                        <img width="300" height="200" src="images/map_thumb.jpg" alt="Map" />
+            	<iframe src="https://discordapp.com/widget?id=401131424347979786&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"></iframe>
                     </a>
                 </div>
             </div>                
@@ -94,6 +92,3 @@ $(function() {
 	</div>
 
 </div> <!-- end of wrapper -->
-
-</body>
-</html>
