--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@ $(function() {
         </div>
             
         <div class="box_w330 float_r">
-            <h5>Location</h5>
+            <h5>Discord Stats</h5>
             <div id="map">
             	<iframe src="https://discordapp.com/widget?id=401131424347979786&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"></iframe>
                     </a>
