--- a/contact.html
+++ b/contact.html
@@ -60,6 +60,9 @@ $(function() {
 		    <a href="https://discord.gg/8D86RK9">
 		    <img border="0" alt="image" src="images/DiscordLogo.png" width="100" height="100">
 </a>
+		     <h5>Email</h5>
+		    <h4>dannisserv@mail.com</h4>
+		    <p>Note! Spam mail will be reported and sent to spam mailbox!
 					</form>
 
             </div> 
