--- a/contact.html
+++ b/contact.html
@@ -61,8 +61,8 @@ $(function() {
 		    <img border="0" alt="image" src="images/DiscordLogo.png" width="100" height="100">
 </a>
 		     <h5>Email</h5>
-		    <h4>dannisserv@mail.com</h4>
-		    <p>Note! Spam mail will be reported and sent to spam mailbox!
+		    <p>dannisserv@mail.com</p>
+		    <h4>Note! Spam mail will be reported and sent to spam mailbox!</h4>
 					</form>
 
             </div> 
