--- a/gallery.html
+++ b/gallery.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>The Block Theme - Gallery Show</title>
+<title>Dannisserv - Gallery</title>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <!--
@@ -35,24 +35,24 @@ $(function() {
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
-                <li><a href="blog.html">Blog</a></li>
+                <li><a href="blog.html">News</a></li>
                 <li><a href="gallery.html" class="current">Gallery</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="contact.html">Social</a></li>
             </ul>    	
         </div> <!-- end of tooplate_menu -->
     </div> <!-- end of forever header -->
     
     <div id="tooplate_middle_sub">
     	<h2>Our Gallery</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus porta adipiscing libero, eget elementum lectus varius sed. Aliquam metus urna, dignissim quis posuere at, posuere eget mauris. Vestibulum laoreet sodales tellus nec mollis. Validate <a href="http://validator.w3.org/check?uri=referer" rel="nofollow"><strong>XHTML</strong></a> and <a href="http://jigsaw.w3.org/css-validator/check/referer" rel="nofollow"><strong>CSS</strong></a>.</p>
+	    <p>This page is where you will find photos of pictures taken by Danniss on different servers or on Dannisserv. Also there will be pictures that will be sent in by other users!/p>
     </div> <!-- end of middle -->
     
     <div id="tooplate_content"><span class="content_top"></span>
 		<div id="gallery">    	
             <div class="gallery_box">          	
                 <div class="gallery_img"><span></span>
-                    <a href="images/gallery/image_01_l.jpg" title="Nunc et tellus id risus ultrices">
-                        <img src="images/gallery/image_01_s.jpg" alt="Image 01" />
+                    <a href="images/Spawn.png" title="Picture of full size spawn">
+                        <img src="images/Spawn.jpg" alt="Image 01" />
                     </a>
                 </div>
                 <h6>Nunc et tellus id risus ultrices</h6>               
