--- a/gallery.html
+++ b/gallery.html
@@ -54,7 +54,7 @@ $(function() {
                         <img src="images/gallery/Spawn.jpg" alt="Image 01" />
                     </a>
                 </div>
-                <h6>selfie with doggo!</h6>               
+                <h6>Full size view of spawn</h6>               
             </div>
             
             <div class="gallery_box">
