Update and rename gallery.html to stats.html

--- a/stats.html
+++ b/stats.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Dannisserv - Gallery</title>
+<title>Dannisserv - Server Stats</title>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <!--
@@ -35,19 +35,17 @@ $(function() {
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="blog.html">News</a></li>
-                <li><a href="gallery.html" class="current">Gallery</a></li>
+                <li><a href="stats.html" class="current">Stats</a></li>
                 <li><a href="contact.html">Social</a></li>
             </ul>    	
         </div> <!-- end of tooplate_menu -->
     </div> <!-- end of forever header -->
     
     <div id="tooplate_middle_sub">
-    	<h2>Our Gallery</h2>
-	    <p>This page is where you will find photos of pictures taken by Danniss on different servers or on Dannisserv. Also there will be pictures that will be sent in by other users!/p>
+    	<h2>Server Status</h2>
+	    <p>On this page you will find out if the servr is online or not, how many players there are and the ip address!</p>
     </div> <!-- end of middle -->
-	<p>Full size image of the server spawn!</p>
-	<div class="image_wrapper image_fl"><span></span>
-        	<img src="images/gallery/Spawn.jpg" alt="image" />
+	<a href='https://minecraftservers.biz/'><img src='https://minecraftservers.biz/servers/106547/image.png?size=large&color=blue&hidden_port=true' /></a>
     </div> <!-- end of content -->
     
     <div id="tooplate_footer">
