--- a/blog.html
+++ b/blog.html
@@ -22,16 +22,16 @@ http://www.tooplate.com/view/2042-the-block
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
-                <li><a href="blog.html" class="current">Blog</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="blog.html" class="current">News</a></li>
+                <li><a href="stats.html">Stats</a></li>
+                <li><a href="contact.html">Social</a></li>
             </ul>    	
         </div> <!-- end of tooplate_menu -->
     </div> <!-- end of forever header -->
     
     <div id="tooplate_middle_sub">
-    	<h2>Our Blog Posts</h2>
-        <p>Vestibulum eleifend consequat laoreet. Pellentesque vel orci sapien. Duis lacus ipsum, pretium ut accumsan in, tempor nec mauris. Aenean accumsan placerat elit, sit amet faucibus ante commodo a. In et neque nibh, ac tristique dui. </p>
+    	<h2>News</h2>
+        <p>On this page this is where you can see the latest news!</p>
     </div> <!-- end of middle -->
     
     <div id="tooplate_content"><span class="content_top"></span>
