--- a/stats.html
+++ b/stats.html
@@ -45,7 +45,18 @@ $(function() {
     	<h2>Server Status</h2>
 	    <p>On this page you will find out if the servr is online or not, how many players there are and the ip address!</p>
     </div> <!-- end of middle -->
+	<h1>Server Status</h1>
 	<a href='https://minecraftservers.biz/'><img src='https://minecraftservers.biz/servers/106547/image.png?size=large&color=blue&hidden_port=true' /></a>
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
     </div> <!-- end of content -->
     
     <div id="tooplate_footer">
