--- a/stats.html
+++ b/stats.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>The Block Theme - Gallery Show</title>
+	<title>Dannisserv - Server Stats</title>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <!--
@@ -30,7 +30,6 @@ $(function() {
 <div id="tooplate_wrapper">
 
 	<div id="tooplate_header">
-        <div id="site_title"><h1><a href="#">The Block</a></h1></div>
         <div id="tooplate_menu">
             <ul>
                 <li><a href="index.html">Home</a></li>
