--- a/stats.html
+++ b/stats.html
@@ -47,8 +47,7 @@ $(function() {
     </div> <!-- end of middle -->
     
     <div id="tooplate_content"><span class="content_top"></span>
-		<div id="gallery">    	
-            <div class="gallery_box">          	
+		<div id "gallery">        	
 <a href='https://minecraftservers.biz/'><img src='https://minecraftservers.biz/servers/106547/image.png?size=large&color=blue&hidden_port=true' /></a>
                     </a>
                 </div>
