--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@ http://www.tooplate.com/view/2042-the-block
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html" class="current">About Us</a></li>
                 <li><a href="blog.html">News</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="stats.html">Stats</a></li>
                 <li><a href="contact.html">Social</a></li>
             </ul>    	
         </div> <!-- end of tooplate_menu -->
