--- a/stats.html
+++ b/stats.html
@@ -46,17 +46,15 @@ $(function() {
 	    <p>On this page you can see live stats of Dannisserv from a range of different websites! And if you click on the links below you can vote for Dannisserv!
     </div> <!-- end of middle -->
     
-    <div id="tooplate_content"><span class="content_top"></span>
-		<div id "gallery">        	
+    <div id="tooplate_content"><span class="content_top"></span>       	
 <a href='https://minecraftservers.biz/'><img src='https://minecraftservers.biz/servers/106547/image.png?size=large&color=blue&hidden_port=true' /></a>
                     </a>
                 </div>
-                <h6>www.minecraftservers.biz.</h6>               
+                <h6>https://minecraftservers.biz/servers/106547/vote/</h6>               
             </div>
             
-            <div class="gallery_box">
-                <div class="gallery_img"><span></span>
-
+		<div id "gallery">        	
+<a href='https://minecraftservers.biz/'><img src='https://minecraftservers.biz/servers/106547/image.png?size=large&color=blue&hidden_port=true' /></a>
                     </a>
                 </div>
                 <h6>Lorem ipsum dolor sit amet</h6>				
