--- a/blog.html
+++ b/blog.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>The Block Theme - Blog Page</title>
+<title>Dannisserv - News</title>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <!--
@@ -37,30 +37,10 @@ http://www.tooplate.com/view/2042-the-block
     <div id="tooplate_content"><span class="content_top"></span>
     		<div class="post_box">
             	<div class="comment"><a href="#">20</a></div>
-            	<h2>Lorem ipsum dolor sit amet</h2>
-                <div class="image_wrapper image_fl"><span></span><img src="images/tooplate_image_02.jpg" alt="Image 02" /></div>
-				<p><span class="cat">Posted in <a href="#">Templates</a>, <a href="#">Freebie</a></span> </p>
-                <p>Vestibulum adipiscing tempus elit eu condimentum. Fusce at mi felis. Etiam sed velit nibh. Nunc bibendum justo elementum auctor. Donec at magna eu neque. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia. </p>
-                148 comments <a class="more float_r" href="#">More</a>
+            	<h2>New Website (News from Discord)</h2>
+                <p>I have made a new website, because the previous host I used put ads everywhere, that bugged me. I also don’t own dannisserv.com anymore because the host didn’t let go of it or something. But here is the link for the new website! https://dannisserv.ga/</p>
                 <div class="cleaner"></div>
 			</div>
-            <div class="post_box">
-            	<div class="comment"><a href="#">17</a></div>
-            	<h2>Etiam gravida sagittis lacus</h2>
-                <div class="image_wrapper image_fl"><span></span><img src="images/tooplate_image_03.jpg" alt="Image 03" /></div>
-				<p><span class="cat">Posted in <a href="#"> CSS Templates</a>, <a href="#">Web Design</a></span> </p>
-                <p>Ellentesque vitae velit eu lectus rhoncus tincidunt. Phasellus dictum dignissim sapien et dapibus. Sed egestas consequat mauris, orci tincidunt sit amet. Donec pharetra porta ultrices. Sed sit amet lectus libero, at porttitor odio. Validate <a href="http://validator.w3.org/check?uri=referer" rel="nofollow"><strong>XHTML</strong></a> and <a href="http://jigsaw.w3.org/css-validator/check/referer" rel="nofollow"><strong>CSS</strong></a>.</p>
-                128 comments <a class="more float_r" href="#">More</a>
-                <div class="cleaner"></div>
-			</div>
-            <div class="post_box">
-            	<div class="comment"><a href="#">10</a></div>
-            	<h2>Aenean vitae velit eget</h2>
-                <div class="image_wrapper image_fl"><span></span><img src="images/tooplate_image_04.jpg" alt="Image 04" /></div>
-				<p><span class="cat">Posted in <a href="#">Illustrations</a>, <a href="#">Graphics</a></span> </p>
-                <p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Proin gravida ornare mauris ac lobortis. Praesent elit neque, lacinia eget interdum eu. Phasellus posuere nisl et odio egestas ac tristique justo ultrices. </p>
-                208 comments <a class="more float_r" href="#">More</a>
-                <div class="cleaner"></div>
 			</div>
         
         <div class="cleaner"></div>
