--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@ http://www.tooplate.com/view/2042-the-block
     </div> <!-- end of middle -->
 	
     <div id="tooplate_content"><span class="content_top"></span>
-    	<h2>Welcome to Dannisserv!</h2>
+    	<h1>Welcome to Dannisserv!</h1>
+	    <h4>IP Address: danniss.serv.gs</h4>
 <div class="image_wrapper image_fl"><span></span>
         	<img src="images/gallery/Dannisserv.jpg" alt="image" />
         </div>
