--- a/blog.html
+++ b/blog.html
@@ -35,8 +35,7 @@ http://www.tooplate.com/view/2042-the-block
     </div> <!-- end of middle -->
     
     <div id="tooplate_content"><span class="content_top"></span>
-    		<div class="post_box">
-            	<div class="comment"><a href="#">20</a></div>
+	    <div class="post_box"></div>
             	<h2>New Website (News from Discord)</h2>
                 <p>I have made a new website, because the previous host I used put ads everywhere, that bugged me. I also don’t own dannisserv.com anymore because the host didn’t let go of it or something. But here is the link for the new website! https://dannisserv.ga/</p>
                 <div class="cleaner"></div>
