--- a/blog.html
+++ b/blog.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>The Block Theme - Blog Page</title>
+<title>Dannisserv - News</title>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <!--
@@ -17,7 +17,6 @@ http://www.tooplate.com/view/2042-the-block
 <div id="tooplate_wrapper">
 
 	<div id="tooplate_header">
-        <div id="site_title"><h1><a href="#">The Block</a></h1></div>
         <div id="tooplate_menu">
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -35,18 +34,15 @@ http://www.tooplate.com/view/2042-the-block
     </div> <!-- end of middle -->
     
     <div id="tooplate_content"><span class="content_top"></span>
-    		<div class="post_box">
             	<div class="comment"><a href="#">20</a></div>
 			<h2>New Website</h2>
                 <p> I have made a new website, because the previous host I used put ads everywhere, that bugged me. I also don’t own dannisserv.com anymore because the host didn’t let go of it or something. But here is the link for the new website! https://dannisserv.ga/</p>
                 <div class="cleaner"></div>
 			</div>
-            <div class="post_box">
 		    <h2></h2>
                 <p></p>
                 <div class="cleaner"></div>
 			</div>
-            <div class="post_box">
             	<div class="comment"><a href="#">10</a></div>
             	<h2></h2>
                 <p></p>
