--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ http://www.tooplate.com/view/2042-the-block
                 <li><a href="index.html" class="current">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="blog.html">News</a></li>
-                <li><a href="stats.html">Stats</a></li>
+                <li><a href="stats.html">Stats/Vote!</a></li>
                 <li><a href="contact.html">Social</a></li>
             </ul>    	
         </div> <!-- end of tooplate_menu -->
