--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@ $(function() {
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="blog.html">News</a></li>
-                <li><a href="stats.html">Stats</a></li>
+                <li><a href="stats.html">Stats/Vote!</a></li>
                 <li><a href="contact.html" class="current">Social</a></li>
             </ul>    	
         </div> <!-- end of tooplate_menu -->
