--- a/blog.html
+++ b/blog.html
@@ -22,7 +22,7 @@ http://www.tooplate.com/view/2042-the-block
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="blog.html" class="current">News</a></li>
-                <li><a href="stats.html">Stats</a></li>
+                <li><a href="stats.html">Stats/Vote!</a></li>
                 <li><a href="contact.html">Social</a></li>
             </ul>    	
         </div> <!-- end of tooplate_menu -->
