--- a/stats.html
+++ b/stats.html
@@ -59,6 +59,12 @@ $(function() {
         </div>
         <div class="cleaner"></div>
     </div> <!-- end of content -->
+	
+	    <div id="tooplate_footer">
+    	Copyright © 2018 <a href="#">Dannisserv</a>
+        <div class="cleaner"></div>
+	</div>
+
 </div> <!-- end of wrapper -->
 
 </body>
