--- a/stats.html
+++ b/stats.html
@@ -43,7 +43,7 @@ $(function() {
     
     <div id="tooplate_middle_sub">
     	<h2>Server Stats</h2>
-	    <p>On this page you can see live stats of Dannisserv from a range of different websites! And if you click on the links below you can vote for Dannisserv!
+	    <p>On this page you can see live stats of Dannisserv from a range of different websites! And if you click on the links below you can vote for Dannisserv! (Footer isn't on the page because it goes weird when you put it on. I think it has something to do with the status banners and vote buttons. Sorry about that!)
     </div> <!-- end of middle -->
     
     <div id="tooplate_content"><span class="content_top"></span>
