--- a/stats.html
+++ b/stats.html
@@ -56,6 +56,9 @@ $(function() {
 	    
 	    <a href="https://topg.org/Minecraft/in-487237" target="_blank"><img src="https://topg.org/topg.gif" width="88" height="53" border="0" alt="minecraft server"></a>
 	    <h4>Click the button to vote! Need more votes to activate the server page!</h4>
+	    
+	    <a href="https://minecraftservers.org/server/507848" target="_blank"><img src="https://status.minecraftservers.org/sunset/507848.png" alt="Dannisserv Minecraft server" width="540" height="90" /></a>
+	    <li><a href="https://minecraftservers.org/vote/507848">Vote on MinecraftServers.org!</a></li>
         </div>
         <div class="cleaner"></div>
     </div> <!-- end of content -->
