--- a/blog.html
+++ b/blog.html
@@ -35,19 +35,13 @@ http://www.tooplate.com/view/2042-the-block
     
     <div id="tooplate_content"><span class="content_top"></span>
 	    <div class="post_box">
-			<h2>New Website! (Post from Discord)</h2>
-                <p> I have made a new website, because the previous host I used put ads everywhere, that bugged me. I also don’t own dannisserv.com anymore because the host didn’t let go of it or something. But here is the link for the new website! https://dannisserv.ga/</p>
+			<h2>Website Done and dusted!</h2>
+                <p>new website is finally finised! (18th July 00:10)</p>
                 <div class="cleaner"></div>
-		    <div class="post_box">
-			</div>
-		    <h2></h2>
-                <p></p>
-                <div class="cleaner"></div>
-			</div>
 	    <div class="post_box">
-            	<h2></h2>
-                <p></p>
-                <div class="cleaner"></div>
+			<h2>New Website! (Post from Discord)</h2>
+                <p> I have made a new website, because the previous host I used put ads everywhere, that bugged me. I also don’t own dannisserv.com anymore because the host didn’t let go of it or something. But here is the link for the new website! https://dannisserv.ga/ (17th July 00:28)</p>
+		  <div class="cleaner"></div>
 			</div>
         
         <div class="cleaner"></div>
